--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			  <dd>  Giboulot, Quentin, Tomáš Pevný, and Andrew Ker. 
 			  <b>"The Non-Zero-Sum Game Of Steganography in Heterogeneous Environments"</b>, 
 			  submitted to IEEE Transactions on Information Forensics and Security, 2023 .
-					<a target='blank'href=./doc/GIBOULOT_Game_SUB.pdf/> Available here.</a></dd>
+					<a target='blank'href=./doc/GIBOULOT_Game_SUB.pdf  Available here.</a></dd>
 			  <dt><br /></dt>
 			  <dd>Giboulot, Quentin, Patrick Bas, and Rémi Cogranne.
 			  <b> "Multivariate Side-Informed Gaussian Embedding Minimizing Statistical Detectability."</b>
