--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Quentin Giboulot</title>
+  <title>Eva Giboulot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="keywords" content="" />
   <meta name="description" content="" />
-  <meta name="author" content="Quentin Giboulot" />
-  <meta name="copyright" content="©Quentin Giboulot | 2020" />
+  <meta name="author" content="Eva Giboulot" />
+  <meta name="copyright" content="©Eva Giboulot | 2020" />
 
   <!-- Facebook and Twitter integration -->
-  <meta property="og:title" content="Quentin Giboulot" />
+  <meta property="og:title" content="Eva Giboulot" />
   <meta property="og:type" content="website" />
  
-  <meta property="og:site_name" content="Quentin Giboulot" />
+  <meta property="og:site_name" content="Eva Giboulot" />
   <meta property="og:description"
-    content="Portfolio of Quentin Giboulot, PhD student in Optimization and Security of Systems" />
+    content="Portfolio of Eva Giboulot, PhD student in Optimization and Security of Systems" />
 
-    content="Portfolio of Quentin Giboulot, PhD student in Optimization and Security of Systems" />
+    content="Portfolio of Eva Giboulot, PhD student in Optimization and Security of Systems" />
 
 
   <!-- CSS -->
@@ -39,7 +39,7 @@
 
 <body>
   <nav class="top-bar">
-    <span class="logo font-w-700"><a href="index.html">Quentin Giboulot</a></span>
+    <span class="logo font-w-700"><a href="index.html">Eva Giboulot</a></span>
 
     <div class="nav-container">
       <input class="menu-btn" type="checkbox" id="menu-btn" />
@@ -71,9 +71,13 @@
           <div>
 		  
 		  <p id="intl-index-RandD-desc1">
-              I am currently a post-doctoral research at the Czech Technical Univeristy within the Artificial Intelligence Center team. 
-			  My research focuses on information security, with particular attention to steganography and steganalysis and the ways to bridge the gap
-			  between academic research and real-world application. I use a variety of techniques within statistical hypothesis testing, game theory and signal processing
+              I am currently a post-doctoral researcher in the LinkMedia team at Renne's Inria Centre. My current research interests lie on emerging problems of AI security, 
+			  notably problems regarding the identification of content produced by generative models, using both forensics and watermarking techniques. 
+			  I am also interested in problems regarding the integrity of training and testing data (e.g. adversarial examples and backdoor attacks) and the way 
+methods from the fields of information security and weak signal detections can applied to construct efficient defenses.
+			  I also worked as a post-doc at the the Czech Technical Univeristy within the Artificial Intelligence Center team. 
+			  My research focused on information security, with particular attention to steganography and steganalysis and the ways to bridge the gap
+			  between academic research and real-world application. I used a variety of techniques within statistical hypothesis testing, game theory and signal processing
 			  for the modeling of real-world multimedia data and providing strong guarantees of performance.
 			  
             </p>
@@ -99,19 +103,19 @@
 
               <dl>
 			  <dt></dt>
-			  <dd>  Giboulot, Quentin, Tomáš Pevný, and Andrew Ker. 
+			  <dd>  Giboulot, Eva, Tomáš Pevný, and Andrew Ker. 
 			  <b>"The Non-Zero-Sum Game Of Steganography in Heterogeneous Environments"</b>, 
-			  submitted to IEEE Transactions on Information Forensics and Security, 2023 .
-					<a target='blank' href="./doc/GIBOULOT_Game_SUB.pdf"/>  Available here.</a></dd>
+			   IEEE Transactions on Information Forensics and Security 18, (2023): 4436-4448 .
+					<a target='blank' href=https://ieeexplore.ieee.org/iel7/10206/4358835/10184491.pdf>  Available here.</a></dd>
 			  <dt><br /></dt>
-			  <dd>Giboulot, Quentin, Patrick Bas, and Rémi Cogranne.
+			  <dd>Giboulot, Eva, Patrick Bas, and Rémi Cogranne.
 			  <b> "Multivariate Side-Informed Gaussian Embedding Minimizing Statistical Detectability."</b>
 			IEEE Transactions on Information Forensics and Security 17 (2022): 1841-1854. 
 			<a target='blank'href=https://hal-utt.archives-ouvertes.fr/hal-03663628/> Available here.</a>
 			</dd>
 			</dl>
 			  <dt><br /></dt>
-			  <dd>Giboulot, Quentin, Rémi Cogranne, and Patrick Bas.
+			  <dd>Giboulot, Eva, Rémi Cogranne, and Patrick Bas.
 			  <b>"Detectability-based JPEG steganography modeling the processing pipeline: the noise-content 
 			trade-off."</b> IEEE Transactions on Information Forensics and Security 16 (2021): 2202-2217.
 					<a target='blank'href=https://hal.science/hal-03096658> Available here.</a></dd>
@@ -132,7 +136,7 @@
           <img alt="en-GB" class="flag" src="img/flags/gb.svg" onclick="chooseLanguage('en-GB')" />
         </li>
       </ul>
-      <p>©Quentin Giboulot 2023</p>
+      <p>©Eva Giboulot 2024</p>
     </div>
     <div class="footer-nav">
       <h4 id="intl-footer-siteMap">Site map</h4>
