--- a/web/code.html
+++ b/web/code.html
@@ -3,27 +3,27 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Quentin Giboulot</title>
+  <title>Eva Giboulot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="keywords" content="" />
   <meta name="description" content="" />
-  <meta name="author" content="Quentin Giboulot" />
-  <meta name="copyright" content="©Quentin Giboulot | 2019" />
+  <meta name="author" content="Eva Giboulot" />
+  <meta name="copyright" content="©Eva Giboulot | 2019" />
   <link rel="canonical" href="https://nicolas.burger.fr" />
 
-  <meta property="og:title" content="Quentin Giboulot" />
+  <meta property="og:title" content="Eva Giboulot" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="../img/hitchhiking.jpg" />
   <meta property="og:url" content="https://nicolasburger.fr" />
-  <meta property="og:site_name" content="Quentin Giboulot" />
+  <meta property="og:site_name" content="Eva Giboulot" />
   <meta property="og:description"
-    content="Portfolio of Quentin Giboulot, PhD student in Optimization and Security of Systems" />
+    content="Portfolio of Eva Giboulot, PhD student in Optimization and Security of Systems" />
   <meta name="twitter:site" content="@burgerni10" />
-  <meta name="twitter:title" content="Quentin Giboulot" />
+  <meta name="twitter:title" content="Eva Giboulot" />
   <meta name="twitter:image" content="../img/hitchhiking.jpg" />
   <meta name="twitter:url" content="https://nicolasburger.fr/" />
   <meta name="twitter:card"
-    content="Portfolio of Quentin Giboulot, PhD student in Optimization and Security of Systems" />
+    content="Portfolio of Eva Giboulot, PhD student in Optimization and Security of Systems" />
 
   <!-- CSS -->
   <link rel="stylesheet" href="../css/main.css" />
@@ -41,7 +41,7 @@
 
 <body class="project-body">
   <nav class="top-bar">
-    <span class="logo font-w-700"><a href="../index.html">Quentin Giboulot</a></span>
+    <span class="logo font-w-700"><a href="../index.html">Eva Giboulot</a></span>
 
     <div class="nav-container">
       <input class="menu-btn" type="checkbox" id="menu-btn" />
@@ -87,7 +87,7 @@
           <img alt="en-GB" class="flag" src="../img/flags/gb.svg" onclick="chooseLanguage('en-GB')" />
         </li>
       </ul>
-      <p>©Quentin Giboulot 2020</p>
+      <p>©Eva Giboulot 2024</p>
     </div>
     <div class="footer-nav">
       <h4 id="intl-footer-siteMap">Site map</h4>
